# Projeto_final_LAEDII

./: .gitignore  CMakeLists.txt  README.md  descricao.txt  makefile  pequenoTeste.txt  quick-run.sh  restaurante
src/: fila.c  header.h  lista.c  main.c  opcoes_menu.c  restaurante.h  tela_adicionar_no_cardapio.c  tela_adicionar_nos_pedidos.c  tela_cardapio.c  tela_pedidos.c  tela_remover_do_cardapio.c  tela_remover_dos_pedidos.c  tela_servir_dos_pedidos.c  tela_ver_cardapio.c  tela_ver_pedidos.c  utils.c
src/kiss_sdl/: kiss_draw.c
